--- a/interface.css
+++ b/interface.css
@@ -18,6 +18,8 @@ body {
 	z-index: 100;
 	padding: 1em;
 	display: none;
+}
+#gamebar {
 	box-sizing: border-box;
 	width: 100%;
 }
@@ -95,25 +97,47 @@ svg.icon {
 	color: Sienna;
 }
 
-#about a {
-	display: block;
-	margin: 2em auto;
-	width: 5em;
-	height: 5em;
-	background: Sienna;
+#about {
+	height: 100%;
+	overflow: hidden;
+}
+#about article {
+	height: calc(100% - 4.5em);
+	overflow: auto;
+	max-height: 100%;
+	margin: 0 15%;
+	font-size: 1.25em;
+}
+#about section {
+	margin: 1em 0 5em 0;
+	min-height: 100%;
+}
+#about-tabs {
 	text-align: center;
-	padding: 1em;
-	font-size: 2em;
+}
+#about-tabs a {
+	display: inline-block;
+	margin: 1.25em .35em 0em .25em;
+	width: 5em;
+	height: 1em;
+	background: Peru;
+	color: PapayaWhip;
+	padding: 1.25em 1em .5em 1em;
+	font-size: 1.5em;
 	text-decoration: none;
-	color: Papayawhip;
-	border-radius: 1em;
+	border-top-left-radius: 1em;
+	border-top-right-radius: 1em;
 	cursor: pointer;
 }
-#about a:hover {
+#about-tabs a:hover {
 	box-shadow: 0 0 1em Coral;
 	text-shadow: 0 0 1em Papayawhip;
 }
-#about a:active {
+#about-tabs a:active {
 	background: Papayawhip;
-	color: Sienna;
+	color: Peru;
+}
+#about-tabs a.selected {
+	background: Sienna;
+	text-shadow: 0 0 1em Papayawhip;
 }
