--- a/interface.css
+++ b/interface.css
@@ -33,6 +33,16 @@ body {
 #gamebar .group2 {
 	float: right;
 }
+#game-score {
+	display: inline-block;
+	padding: .25em;
+	text-align: right;
+	width: 2.5em;
+	font-size: 3em;
+	font-weight: bolder;
+	text-shadow: 1px 1px Peru;
+}
+
 h1 {
 	margin: 1em auto;
 	text-align: center;
