--- a/interface.css
+++ b/interface.css
@@ -276,3 +276,9 @@ svg.icon {
 	background: Sienna;
 	text-shadow: 0 0 1em Papayawhip;
 }
+#about select {
+	font-size: 1.5em;
+	padding: .1em .5em;
+	margin: 0 .5em;
+	width: 7em;
+}
