--- a/interface.css
+++ b/interface.css
@@ -312,3 +312,18 @@ svg.icon {
 	margin: 0 .5em;
 	width: 7em;
 }
+#about img {
+	width: 100%;
+	margin: 2em auto;
+	display: block;
+}
+#about img.figure {
+	width: 50%;
+}
+#about img.floater {
+	width: 45%;
+	padding: 0;
+	margin: 2em 2%;
+	display: inline-block;
+	border: 2px solid Sienna;
+}
